--- a/index.html
+++ b/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="global.css">
     <meta charset="UTF-8">
     <title>Calculate Spell Time</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="./contents/bootstrap/4.1.3/css/bootstrap.min.css" />
+    
+    <!-- Bootstrap Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script>let $ = require('jquery');</script>
+    <script>require('popper.js');</script>
+    <script>require('bootstrap');</script>
 </head>
-<body style="background: white;">
-    <h1>Hello World!</h1>
-    <p>
-        <select id="selectElement"></select>
-    </p>
+<body>
+    <h1>Calculate Spell Time xD</h1>
+
+    <p>TOP</p>
+    <div>
+        <select class="form-select form-select-lg mb-3" id="selectChampion"></select>
+        <button id="btnFlash" onclick="timerFlash();">Flash</button>
+        <span id="flashTime">ELE TEM FLASH</span>
+    </div>
+
 </body>
 
-<script>
-    select = document.getElementById('selectElement');
+<script type="text/javascript" src="src/script.js"></script>
 
-    for (var i = 0; i<=151; i++){
-        var opt = document.createElement('option');
-        opt.value = champions[i].name;
-        opt.innerHTML = champions[i].name;
-        select.appendChild(opt);
-    }
-</script>
-
-<script type="text/javascript" src="teste.json"></script>
 </html>
