--- a/index.html
+++ b/index.html
@@ -5,22 +5,21 @@
     <meta charset="UTF-8">
     <title>Calculate Spell Time</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="./contents/bootstrap/4.1.3/css/bootstrap.min.css" />
-    
-    <!-- Bootstrap Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script>let $ = require('jquery');</script>
-    <script>require('popper.js');</script>
-    <script>require('bootstrap');</script>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Calculate Spell Time xD</h1>
 
     <p>TOP</p>
     <div>
-        <select class="form-select form-select-lg mb-3" id="selectChampion"></select>
-        <button id="btnFlash" onclick="timerFlash();">Flash</button>
+        <select class="form-select form-select-lg mb-3" id="selectChampion" style="width: 40%;">
+            <li>
+                <img src=".//public/flash.png">
+            </li>
+        </select>
+        <a href="#" onclick="timerFlash();"><img id="btnFlash" src=".//public/flash.png" style="width: 10%;"></a>
         <span id="flashTime">ELE TEM FLASH</span>
     </div>
 
